--- a/Css Day 3/Architect.html
+++ b/Css Day 3/Architect.html
@@ -38,8 +38,63 @@
         .p1{
             position: absolute;
             padding: 10px;
-
         }
+        .p2{
+            position: absolute;
+            bottom: 790px;
+            left: 10px;
+            padding: 10px;
+            background-color: #0a0c0e;
+            color: #9911f3;
+        }
+        .p3{
+            position: absolute;
+            bottom: 790px;
+            left: 429px;
+            padding: 10px;
+            background-color: #0a0c0e;
+            color: #00e63a;
+        }
+        .p4{
+            position: absolute;
+            bottom: 790px;
+            left: 850px;
+            padding: 10px;
+            background-color: #0a0c0e;
+            color: #00e63a;
+        }
+        .p5{
+            position: absolute;
+            bottom: 365px;
+            left: 10px;
+            padding: 10px;
+            background-color: #0a0c0e;
+            color: #00e63a;
+        }
+        .p6{
+            position: absolute;
+            bottom: 365px;
+            left: 440px;
+            padding: 10px;
+            background-color: #0a0c0e;
+            color: #00e63a;
+        }
+        .p7{
+            position: absolute;
+            bottom: 365px;
+            left: 850px;
+            padding: 10px;
+            background-color: #0a0c0e;
+            color: #00e63a;
+        }
+
+        .d9{
+            position: relative;
+        }
+
+
+
+
         .im{
             float: left;
         }
@@ -105,7 +160,17 @@
     <img src="https://images.pexels.com/photos/2119714/pexels-photo-2119714.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Architecture" height="420" width="420">
     <img src="https://media.gettyimages.com/id/128502214/photo/classic-turn-of-the-century-american-house.jpg?s=612x612&w=0&k=20&c=CYuyGZw8DfXzjSD2Ue6IIPbJ5IwXPMDGsnfpWYrJQZg=" alt="Architecture" height="420" width="420">
     <img src="https://images.unsplash.com/photo-1571857322607-eccc9897278b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGJyaWNrJTIwaG91c2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="Architecture" height="420" width="420">
+
+    <div class="d9">
+        <p class="p2" ><b>Summer House</b></p>
+        <p class="p3"><b>Modern House</b></p>
+        <p class="p4"><b>Barn House</b></p>
+        <p class="p5"><b>Stored Building</b></p>
+        <p class="p6"><b>Modern House</b></p>
+        <p class="p7"><b>Brick House</b></p>
+    </div>
 </div><br><br>
+
 <h2 id="about">About</h2>
 <hr>
 <p style="font-style: italic;">Architecture is the art and science of designing and constructing buildings that not only serve functional purposes but also evoke emotional and aesthetic responses. It is a profound form of human expression, a reflection of culture, history, and society. Architects blend the practicality of engineering with the creativity of art to create spaces that inspire, comfort, and shelter. From the grandeur of ancient monuments like the Pyramids of Giza to the sleek, sustainable designs of contemporary skyscrapers, architecture has evolved over millennia, adapting to the changing needs and aspirations of humanity. It encompasses a wide spectrum, from residential homes to monumental public structures, each telling a unique story.
